Iniciando testes de rotas e controllers com .net

--- a/School.API/Properties/launchSettings.json
+++ b/School.API/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "School.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api/aluno",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
