--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=School.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
