--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=School.db"
+    "Default": "Data Source=School.db",
+    "MysqlConnection": "Server=localhost;Port=3306;Database=SchoolDB;User=root;Password=admin"
   },
   "Logging": {
     "LogLevel": {
