melhorias no docker

--- a/School.API/appsettings.Development.json
+++ b/School.API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+    "ConnectionStrings": {
+    "Default": "Data Source=School.db",
+    "MysqlConnection": "Server=localhost;Port=3306;Database=SchoolDb;User=root;Password=admin"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
