--- a/School.API/docker-compose.yml
+++ b/School.API/docker-compose.yml
@@ -1,41 +1,40 @@
 version: "3.8"
 
-volumes:
-  SchoolDb:
+volumes: 
+    SchoolDb:
 
-networks:
-  mysqlNET:
-  schoolNET:
+networks: 
+    mysqlNET:
+    smartschoolNET:
 
-services:
-  mysql:
-    image: "mysql:5.7"
-    container_name: mysql
-    ports:
-      - "3306:3306"
-    volumes:
-      - SchoolDb:var/lib/mysql
-    networks:
-      - mysqlNET
-    environment:
-      - MYSQL_ROOT_PASSWORD=admin
-      - MYSQL_PASSWORD=admin
-      - MYSQL_ROOT_HOST=%
-      - bind-address:0.0.0.0
+services: 
 
-
-  school:
-    build:
-      context: .
-      dockerfile: Dockerfile
-
-    container_name: school
-    networks:
-      - mysqlNET
-      - schoolNET
-    ports:
-      - 5000:80
-    environment:
-      - DBHOST=mysql
-    depends_on:
-      - mysql 
+    mysql:
+        image: "mysql:5.7"
+        container_name: mysql
+        ports: 
+            - "3306:3306"
+        volumes: 
+            - SchoolDb:/var/lib/mysql
+        networks: 
+            - mysqlNET
+        environment: 
+            - MYSQL_PASSWORD=admin 
+            - MYSQL_ROOT_PASSWORD=admin 
+            - MYSQL_ROOT_HOST=%
+            - bind-address:0.0.0.0 
+    
+    smartschool:
+        build:
+            context: .
+            dockerfile: Dockerfile
+        container_name: school
+        networks: 
+            - mysqlNET
+            - smartschoolNET
+        ports: 
+            - 5000:80
+        environment: 
+            - DBHOST=mysql
+        depends_on: 
+            - mysql
