--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "Default": "Data Source=School.db",
-    "MysqlConnection": "Server=localhost;Port=3306;Database=SchoolDb;User=root;Password=admin"
+    "MysqlConnection": "Server=localhost;Port=3306;Database=SchoolDB;User=root;Password=admin"
   },
   "Logging": {
     "LogLevel": {
